--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       referrerpolicy="no-referrer"
     />
     <link href="./css/styles.css" rel="stylesheet" />
+    <link href="./css/main.css" rel="stylesheet">
   </head>
 
   <body>
@@ -46,6 +47,11 @@
             </li>
           </ul>
         </nav>
+        <button type="button" class="mobail-burger">
+          <svg class="mobail-burger-svg" width="32" height="22">
+            <use href="images/icons.svg#menu-hamburger"></use>
+          </svg>
+        </button>
         <address class="address">
           <ul class="ul-logo-address list">
             <li class="address-li">
@@ -65,7 +71,7 @@
       </div>
     </header>
     <main>
-      <section class="index-section-one">
+      <section class="index-section-one section">
         <div class="container">
           <h1 class="main-header">Effective Solutions for Your Business</h1>
           <button class="main-but" type="button" data-modal-open>
@@ -77,7 +83,7 @@
         <div class="container">
           <h2 class="visually-hidden">content</h2>
           <ul class="small-list list">
-            <li class="calc">
+            <li class="calc small-list-li">
               <div class="container-icon-section-two">
                 <svg class="index-icons-section-two" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
@@ -89,7 +95,7 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="calc">
+            <li class="calc small-list-li">
               <div class="container-icon-section-two">
                 <svg class="index-icons-section-two" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
@@ -101,7 +107,7 @@
                 within the shortest possible time.
               </p>
             </li>
-            <li class="calc">
+            <li class="calc small-list-li">
               <div class="container-icon-section-two">
                 <svg class="index-icons-section-two" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
@@ -113,7 +119,7 @@
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="calc">
+            <li class="calc small-list-li">
               <div class="container-icon-section-two">
                 <svg class="index-icons-section-two" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
@@ -128,19 +134,19 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="section section-three">
         <div class="container">
           <h2 class="header-section-two">What are we doing</h2>
           <ul class="photo-list list">
             <li class="calc-photo">
-              <img src="./images/iMac.jpg" alt="iMac" width="360" />
+              <img srcset="./images/index/what-are-we-doing/iMac@2x.jpg 2x" src="./images/index/what-are-we-doing/iMac.jpg" alt="iMac" width="360" />
             </li>
             <li class="calc-photo">
-              <img src="./images/phone.jpg" alt="phone" width="360" />
+              <img srcset="./images/index/what-are-we-doing/phone@2x.jpg 2x" src="./images/index/what-are-we-doing/phone.jpg" alt="phone" width="360" />
             </li>
             <li class="calc-photo">
-              <img
-                src="./images/phone_for_laptop.jpg"
+              <img srcset="./images/index/what-are-we-doing/phone_for_laptop@2x.jpg 2x"
+                src="./images/index/what-are-we-doing/phone_for_laptop.jpg"
                 alt="phone for laptop"
                 width="360"
               />
@@ -153,8 +159,8 @@
           <h2 class="index-main-header-section-four">Our Team</h2>
           <ul class="team-list list">
             <li class="team-list-li calc">
-              <img
-                src="./images/man_with_beard.jpg"
+              <img srcset="./images/index/our-time/man_with_beard@2x.jpg 2x"
+                src="./images/index/our-time/man_with_beard.jpg"
                 alt="man with beard"
                 width="264"
               />
@@ -211,7 +217,7 @@
               </div>
             </li>
             <li class="team-list-li calc">
-              <img src="./images/man.jpg" alt="man" width="264" />
+              <img srcset="./images/index/our-time/man@2x.jpg 2x" src="./images/index/our-time/man.jpg" alt="man" width="264" />
               <div class="name-and-job">
                 <h3 class="li-htwo">Tom Ford</h3>
                 <p class="team-job p-in-li">Frontend Developer</p>
@@ -265,7 +271,7 @@
               </div>
             </li>
             <li class="team-list-li calc">
-              <img src="./images/woman.jpg" alt="woman" width="264" />
+              <img srcset="./images/index/our-time/woman@2x.jpg 2x" src="./images/index/our-time/woman.jpg" alt="woman" width="264" />
               <div class="name-and-job">
                 <h3 class="li-htwo">Camila Garcia</h3>
                 <p class="team-job p-in-li">Marketing</p>
@@ -319,8 +325,9 @@
               </div>
             </li>
             <li class="team-list-li calc">
-              <img
-                src="./images/man_with_stubble.jpg"
+              <img 
+                srcset="./images/index/our-time/man_with_stubble@2x.jpg 2x"
+                src="./images/index/our-time/man_with_stubble.jpg"
                 alt="man with stubble"
                 width="264"
               />
@@ -381,7 +388,7 @@
       </section>
       <section class="section-icons section">
         <div class="container">
-          <h2 class="header-section-two">Customers</h2>
+          <h2 class="header-section-five">Customers</h2>
           <ul class="list-icons-card list">
             <li class="list-icon-card">
               <a href="" class="link-icon-card">
@@ -428,7 +435,7 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> 
     <footer class="footer">
       <div class="container container-footer">
         <div class="footer-logo-text">
@@ -487,8 +494,8 @@
           </form>
         </div>
       </div>
-    </footer>
-    <div class="backdrop " data-modal>
+    </footer>  
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal-window">
         <button type="button" class="icon-wrapper-modal-close" data-modal-close>
           <svg class="icon-modal-close-window" width="8" height="8">
