--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,7 @@
       referrerpolicy="no-referrer"
     />
     <link href="./css/styles.css" rel="stylesheet" />
+    <link href="./css/main.css" rel="stylesheet">
   </head>
   <body>
     <header class="header">
